re #EOS-785 fixed word break in tooltips

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -113,7 +113,7 @@
     opacity: 1 !important;
     z-index: 1045;
     &.word-break {
-        word-break: break-all;
+        word-break: normal;
     }
     .tooltip-inner {
         padding: 8px;
